# servicio-windows-node

./: .gitignore  CHANGELOG.md  LICENSE  PROGRESS.md  README.md  package-lock.json  package.json  tsconfig.json
rust/: Cargo.toml
rust/src/: main.rs
rust/src/commands/: install.rs  mod.rs  run.rs  start.rs  status.rs  stop.rs  uninstall.rs
rust/src/models/: config.rs  mod.rs
rust/src/services/: mod.rs  node_finder.rs  scm.rs  service_config.rs
src/: index.ts  main.ts
src/cli/: index.ts  init.command.ts  install.command.ts  logs.command.ts  restart.command.ts  start.command.ts  status.command.ts  stop.command.ts  uninstall.command.ts
src/models/: winsvc-config.model.ts
src/services/: binary.service.ts  config.service.ts  process.service.ts
src/utils/: errors.ts  logger.ts
test-app/: server.js
