[package]
name        = "node-winsvc-core"
version     = "0.1.0"
edition     = "2021"
description = "Native Win32 Windows Service manager — core binary for node-winsvc"

[[bin]]
name = "node-winsvc-core"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
thiserror  = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }
